@@ -1,3 +1,7 @@
+2009-04-14	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* telnetd/init.c: Updated telnet demon initialization.
+
 2009-02-10	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* networkconfig-qemu.h: Add option for qemu to use PCI i82551 NIC.
